@@ -1,0 +1,17 @@
+# openssl_init_test.conf
+#
+# Used by tests for OPENSS_INIT_ family of functions.
+
+openssl_conf = test_openssl_init
+config_diagnostics = 1
+
+[test_openssl_init]
+ssl_conf = ssl_configuration
+
+[ssl_configuration]
+system_default = tls_system_default
+
+[tls_system_default]
+MinProtocol = TLSv1.3
+CipherSuites = TLS_AES_128_CCM_8_SHA256
+CipherString = AES256-GCM-SHA384
