@@ -92,6 +92,8 @@ perl_filehandle_t T_PERL_IO_HANDLE
 OSSL_LIB_CTX * T_PTR
 OSSL_PROVIDER * T_PTR
 const OSSL_PROVIDER * T_PTR
+OPENSSL_INIT_SETTINGS * T_PTR
+const OPENSSL_INIT_SETTINGS * T_PTR
 
 uint64_t T_UINT64
 
